--- a/public/view/index.html
+++ b/public/view/index.html
@@ -20,7 +20,7 @@
       </div>
 
       <div class="from">
-        <form>
+        <form id="register_from" method="POST">
           <div class="form-group">
             <label for="username">User Name</label>
             <input type="text" class="form-control" id="username" placeholder="Enter Username">
@@ -44,7 +44,7 @@
 
           <div class="form-group">
             <label for="phoneno">Phone Number</label>
-            <input type="number" class="form-control" placeholder="Enter Phone Number">
+            <input type="number" class="form-control phone" id="phone_no" placeholder="Enter Phone Number">
           </div>
 
 
