--- a/public/view/index.html
+++ b/public/view/index.html
@@ -23,28 +23,28 @@
         <form id="register_from" method="POST">
           <div class="form-group">
             <label for="username">User Name</label>
-            <input type="text" class="form-control" id="username" placeholder="Enter Username">
+            <input type="text" class="form-control" id="username" placeholder="Enter Username" required>
           </div>
 
           <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-              placeholder="Enter email">
+            <label for="email">Email address</label>
+            <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
+              placeholder="Enter Email" required>
           </div>
 
           <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" id="password" placeholder="Password" required>
           </div>
 
           <div class="form-group">
             <label for="repassword">Confirm Password</label>
-            <input type="password" class="form-control" placeholder="Confirm Password">
+            <input type="password" id="repassword" class="form-control" placeholder="Confirm Password" required>
           </div>
 
           <div class="form-group">
             <label for="phoneno">Phone Number</label>
-            <input type="number" class="form-control phone" id="phone_no" placeholder="Enter Phone Number">
+            <input type="number" class="form-control phone" id="phone_no" placeholder="Enter Phone Number" required>
           </div>
 
 
@@ -60,7 +60,7 @@
   <script>let $ = require('jquery');</script>
   <script>require('popper.js');</script>
   <script>require('bootstrap');</script>
-  <script>require('../assets/js/index.js')</script>
+  <script>require('../assets/js/index.js');</script>
 </body>
 
 </html>
